== (unreleased)

* Fixed load and requests_per_second to work with cap2 [Gufo Pelato]
* Allow tasks in staging files to be invoked without explicitly specifying the stage [Michael Hale]
* Added ability to invoke web:disable/enable on a stage basis when using Multistage extension. [Simone Carletti] 


== 1.2.1 (June 14, 2008)

* Exclude multistage:prepare from the multistage:ensure check [Matt Sanders]
* Don't clobber pre-existing stage definitions on
  multistage:prepare [Matt Sanders]
* Made multistage module autodetect stages. [Jamis Buck]


== 1.2.0 (July 6, 2007)

* Added multistage as a packaged staging option. [Jamis Buck]


== 1.1.1 (May 12, 2007)

* Tweak to work with Capistrano 2 [Jamis Buck]


== 1.1.0 (September 14, 2006)

* Add uptime task [Jamis Buck]
* Fix padding on long machine names [Michael Schoen]
* Fix matching of machine names [Michael Schoen]
* Fix matching of load averages [Michael Schoen]


== 1.0.1 (March 6, 2006)

* Rename capistrano-ext
* Put request monitor script in user's home directory, instead of /tmp,
  to accomodate multiple users